--- a/likelion1.html
+++ b/likelion1.html
@@ -13,9 +13,9 @@
     <br>
         <h1>Hello. This is Yannoo.</h1>
         <p>I'm studying <ins>Web-programming.</ins></p>
-        <br>Actually, I'm <del>"god"</del>
+        <br>Actually, I'm <del>good</del>
         <pre>
-            What do you want?
+            STARBUCKS
         </pre>
         This is <em>me</em>
         <br>e<sup>2</sup>
