--- a/likelion1.html
+++ b/likelion1.html
@@ -26,11 +26,11 @@
         <table>
             <tr>
                 <th>종족</th>
-                <td>악마</td>
+                <td>오리너구리</td>
                 <td>파충류</td>
             </tr>
             <tr>
-                <th>공격력</th>
+                <th>가격</th>
                 <td>3500</td>
                 <td>2100</td>
             </tr>
